# deepAgentsPostgreSql

./: .env  .env.example  .env.production  .gitignore  README.md  docker-compose.yml  skills-lock.json
docs/: FRAMEWORKS.md  PROJECT_STATE.md  PROJECT_STRUCTURE.md  REQUIREMENTS.md
infrastructure/postgres/: Dockerfile
infrastructure/postgres/init/: 01-init.sql  02-tenant-setup.sh
services/chat-api/: .dockerignore  Dockerfile  pyproject.toml
services/chat-api/app/: agent.py  agent_manager.py  backends.py  config.py  database.py  health.py  main.py  main.py.bak
services/chat-api/app/agents/: __init__.py  backends.py  factory.py  tenant.py
services/chat-api/app/core/: agent.py  config.py  dependencies.py  exceptions.py  health.py
services/chat-api/app/db/: __init__.py  connection.py  pool.py  tenant_db.py
services/chat-api/app/infrastructure/: database.py  middleware.py
services/chat-api/app/middleware/: __init__.py  user.py
services/chat-api/app/models/: __init__.py  chat.py  history.py  request.py  response.py
services/chat-api/app/routers/: chat.py
services/chat-api/app/services/: __init__.py  chat_service.py
services/chat-api/app/utils/: __init__.py  streaming.py
services/chat-api/chat_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
services/chat-api/tests/: conftest.py  test_agent.py  test_chat.py  test_chat_service.py  test_tenant_db_lifecycle.py  test_tenant_isolation.py  test_tenant_manager.py  test_user_id_extraction.py
