[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-api"
version = "0.1.0"
description = "DeepAgents + PostgreSQL chat API service"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.29.0",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "psycopg[binary]>=3.0",
    "langgraph-checkpoint-postgres",
    "deepagents>=0.5,<1.0",
    "sse-starlette>=1.6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.49",
]

[project.scripts]
uvicorn-run = "uvicorn:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "pytest-mock>=3.14",
    "ruff>=0.8",
    "mypy>=1.13",
    "asyncer>=0.0.4",
]
[project.optional-dependencies]
openai = [
    "langchain-openai",
]
anthropic = [
    "langchain-anthropic",
]
google = [
    "langchain-google-genai",
]
chatollama = [
    "langchain-ollama",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.fastapi]
entrypoint = "app.main:app"
dev = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E", "F", "W", "I", "N", "B", "UP", "A", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = [
    "langchain*",
    "langgraph*",
    "deepagents*",
    "pydantic_settings",
]
